--- a/miniblog/src/index.css
+++ b/miniblog/src/index.css
@@ -8,6 +8,7 @@ body{
 input::placeholder,
 textarea::placeholder{
     font-family: "Montserrat" ,sans-serif;
+    color:#aaa;
 }
 
 input:focus,
@@ -29,4 +30,86 @@ nav, button {
 a:hover ,
 nav button:hover {
  color: #bbb;
+}
+
+
+/* style aobut form */
+
+form{
+    max-width: 40%;
+    margin: 0 auto ;
+}
+
+label{
+    display: flex;
+    flex-direction: column;
+    margin-bottom:1px ;
+}
+
+label span {
+    margin-bottom: .3em;
+    font-weight: bold;
+    text-align: left;
+}
+
+input,
+textarea {
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px  solid #ccc;
+  padding: .8em 0 ;
+}
+
+
+.btn{
+    background-color: #1a8918;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 120px;
+    font-weight: bold;
+    margin-top:10px ;
+    border: none;
+    padding: 10px 15px;
+    font-size: 1em;
+}
+
+.btn.btn-dark{
+ background-color: #000;
+ border-radius: 0%;
+}
+
+.btn.btn-outline{
+background-color: transparent;
+border-radius: 0%;
+color: #000;
+border: 1px solid #000;
+padding: 7px 30px;
+}
+
+.btn:hover{
+    background-color: #0f730c;
+    color: white;
+}
+
+.btn.btn-outline:hover{
+    background-color: #000;
+}
+
+.btn.btn-danger:hover{
+    background-color:#dc3545 ;
+}
+
+button[disabled]{
+background-color: #aaa;
+}
+
+
+.container .error{
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb ;
+    padding: 5px;
+    border-radius: 5px;
 }
