--- a/miniblog/src/index.css
+++ b/miniblog/src/index.css
@@ -1,6 +1,6 @@
 body{
     background-color: #f6fcff;
-    padding: 0%;
+    padding: 0;
     margin: 0;
     font-family: "Montserrat" ,sans-serif;
 }
@@ -23,6 +23,7 @@ nav, button {
     border: none;
     color: #000 ;
     transition: .4s;
+    font-size: 1em;
     cursor: pointer;
     font-family: "Montserrat" ,sans-serif; 
 }
@@ -38,12 +39,13 @@ nav button:hover {
 form{
     max-width: 40%;
     margin: 0 auto ;
+   
 }
 
 label{
     display: flex;
     flex-direction: column;
-    margin-bottom:1px ;
+    margin-bottom:1em ;
 }
 
 label span {
@@ -77,7 +79,8 @@ textarea {
 
 .btn.btn-dark{
  background-color: #000;
- border-radius: 0%;
+ border-radius: 0;
+ margin-bottom: 40px;
 }
 
 .btn.btn-outline{
