--- a/miniblog/src/Componentes/footer.module.css
+++ b/miniblog/src/Componentes/footer.module.css
@@ -4,5 +4,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #edf3f6;
+    background-color: #edf3f6
 }
