--- a/miniblog/src/Pages/Dashboards/dashboard.module.css
+++ b/miniblog/src/Pages/Dashboards/dashboard.module.css
@@ -1,4 +1,55 @@
 .dashcontainer{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashcontainer h2 {
+    font-size: 2.2em;
+    margin-bottom: .5em;
+}
+
+.dashcontainer p {
+   color: rgb(111, 97, 97);
+   margin-bottom: 1em;
+}
+
+
+.nopost {
+    text-align: center;
+    }
+.nopost  p {
+    margin-bottom: 1.5em;
+}
     
+.nopost a {
+    padding: 10px 25px;
+}
+
+.post_header , .post_row {
+ display: flex;
+ justify-content: space-between;
+ width: 80%;
+ padding: 10px;
+}
+
+
+.post_header {
+ font-weight: bold;
+ border-bottom: 2px solid #ccc 
+}
+
+.post_row {
+ align-items: center;
+ border-bottom:1px solid #eee ;
+}
+
+.post_row button,
+.post_row a {
+  margin: 0 5px;
+  height: 30px;
+  width: 100px;
+  font-size: 0.7em ;
 }
